--- a/02-SOM/biblio_SOM.bib
+++ b/02-SOM/biblio_SOM.bib
@@ -7,6 +7,12 @@ volume={43},
 number={1},
 pages={59--69},
 }
+@inproceedings{Kohonen1995SelfOrganizingM,
+  title={Self-Organizing Maps},
+  author={Teuvo Kohonen},
+  booktitle={Springer Series in Information Sciences},
+  year={1995}
+}
 
 @incollection{cottrell_theoretical_2016,
 	address = {Cham},
@@ -62,15 +68,7 @@ pages={59--69},
 }
 
 
-@inproceedings{koikkalainen_self-organizing_1990,
-	title = {Self-organizing hierarchical feature maps},
-	doi = {10.1109/IJCNN.1990.137727},
-	abstract = {The topological feature map (TFM) algorithm introduced by T. Kohenen (1982) implements two important properties: a vector quantization (VQ) and a topology-preserving mapping. A tree-structured TFM (TSTFM) is presented as a computationally inexpensive alternative to the TFM algorithm. The computational complexity of the TSTFM is O (log N) rather than O(N) for the TFM. In addition, the TSTFM has some new properties that prove to be useful for VQ and in the context of visual perception: increased performance in VQ compared to the tree-structured VQ of A. Buzo et al. (1980) and hierarchical mapping of code vectors},
-	booktitle = {1990 {IJCNN} {International} {Joint} {Conference} on {Neural} {Networks}},
-	author = {Koikkalainen, P. and Oja, E.},
-	month = jun,
-	year = {1990}
-}
+
 
 
 @article{alahakoon_dynamic_2000,
@@ -87,6 +85,25 @@ pages={59--69},
 	note = {Conference Name: IEEE Transactions on Neural Networks},
 	keywords = {Clustering algorithms, Computer science, Data analysis, Data mining, Humans, Neural networks, Pattern analysis, Self organizing feature maps, Software engineering, Unsupervised learning},
 	pages = {601--614},
-	file = {IEEE Xplore Full Text PDF:/home/noemie/Zotero/storage/3D7UZBIY/Alahakoon et al. - 2000 - Dynamic self-organizing maps with controlled growt.pdf:application/pdf;IEEE Xplore Abstract Record:/home/noemie/Zotero/storage/85FSH5DK/846732.html:text/html},
+	file = {IEEE Xplore Full Text PDF:/home/noemie/Zotero/storage/3D7UZBIY/Alahakoon et al. - 2000 - Dynamic self-organizing maps with controlled growt.pdf:application/pdf;IEEE Xplore Abstract Record:/home/noemie/Zotero/storage/85FSH5DK/846732.html:text/html}
 }
+
+
+@article{menard_model_2005,
+	title = {Model of multi-modal cortical processing: {Coherent} learning in self-organizing modules},
+	volume = {18},
+	issn = {08936080},
+	shorttitle = {Model of multi-modal cortical processing},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S0893608005001255},
+	doi = {10.1016/j.neunet.2005.06.036},
+	language = {en},
+	number = {5-6},
+	urldate = {2018-11-08},
+	journal = {Neural Networks},
+	author = {Ménard, Olivier and Frezza-Buet, Hervé},
+	month = jul,
+	year = {2005},
+	pages = {646--655}
+}
+
 
